<resources>
    <string name="app_name">BabyNeeds</string>
    <string name="action_settings">Settings</string>
    <string name="add_item">Add Item</string>
    <string name="addtitle">Add item</string>
    <string name="save_item">Save Item</string>
    <string name="enter_the_size">Enter the size</string>
    <string name="select_a_color_for_the_item">Select a color for the item</string>
    <string name="enter_the_quantity">Enter the quantity</string>
    <string name="Drop_at">DROP TABLE IF EXISTS</string>
    <string name="item">Item</string>
    <string name="quantity">Quantity</string>
    <string name="color">Color</string>
    <string name="size">Size</string>
    <string name="confirm">Confirm</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="update_item">Update</string>
    <string name="updating">Update item</string>
</resources>
