<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="12dp">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/list"
        app:cardBackgroundColor="@color/colorPrimaryDark"
        android:padding="12dp"
        android:elevation="12dp"
        app:cardCornerRadius="8dp"

        >
        <RelativeLayout
            android:id="@+id/lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="15sp"
                android:text="@string/item"
                android:id="@+id/itemname"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="15sp"
                android:text="@string/quantity"
                android:id="@+id/itemquan"
                android:layout_below="@+id/itemname"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="15sp"
                android:text="@string/color"
                android:id="@+id/itemcolor"
                android:layout_below="@+id/itemquan"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:textSize="15sp"
                android:id="@+id/itemsize"
                android:text="@string/size"
                android:layout_below="@+id/itemcolor"
                />

            <TableRow
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_alignBottom="@+id/itemsize"
                >
                <Button
                    android:id="@+id/editButton"
                    android:background="@android:drawable/ic_menu_edit"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="12dp"
                    />
                <Button
                android:id="@+id/deleteButton"
                android:background="@android:drawable/ic_delete"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="12dp"
                />
            </TableRow>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>