<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        app:cardCornerRadius="15dp"
        android:elevation="30dp"
        app:cardBackgroundColor="#F1F1F5">

        <RelativeLayout
            android:layout_width="match_parent"
            android:padding="12dp"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:text="@string/confirm"
                android:textColor="#3F51B5"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/yes"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="70dp"
                android:shadowColor="@android:color/black"
                android:textColor="@android:color/white"
                android:elevation="30dp"
                android:background="@android:color/holo_red_dark"
                android:text="@string/yes" />

            <Button
                android:id="@+id/no"
                android:elevation="30dp"
                android:textColor="@android:color/white"
                android:shadowColor="@android:color/black"
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="55dp"
                android:background="@android:color/holo_green_dark"
                android:text="@string/no" />

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>